beacon-text overlapping fix

--- a/css/main.nested.css
+++ b/css/main.nested.css
@@ -369,10 +369,9 @@ button {
   background: #ffffff;
   margin-right: 9px; }
   .btn-google__icon img {
-    /* width: 18px; */
-    /* height: 18px; */
-    /* line-height: 30px; */
-    }
+    width: 18px;
+    height: 18px;
+    line-height: 30px; }
 
 .btn-google__title {
   font: 800 14px "Open Sans";
@@ -667,6 +666,35 @@ img.cat-icon {
 .header-shift {
   width: 100%;
   height: 80px; }
+
+.geo-location__icon {
+  position: relative;
+  margin-bottom: 10px; }
+  .geo-location__icon:before {
+    display: block;
+    content: '';
+    background-image: url("../svg/icon-location.svg");
+    background-repeat: no-repeat;
+    width: 16px;
+    height: 24px;
+    position: absolute;
+    top: 0;
+    left: 0; }
+
+.geo-location__mile {
+  display: inline-block;
+  line-height: 24px;
+  padding: 0 10px;
+  background: #00999e;
+  border-radius: 4px;
+  color: #ffffff;
+  font: 700 17px "Brandon Grotesque"; }
+
+.padding-left--small {
+  padding-left: 24px; }
+
+.display-inline-block {
+  display: inline-block; }
 
 section.headline {
   text-align: center; }
@@ -1282,15 +1310,6 @@ div.geo-city {
     position: absolute;
     top: 0;
     left: 0; }
-
-div.geo-mile {
-  display: inline-block;
-  line-height: 24px;
-  padding: 0 10px;
-  background: #00999e;
-  border-radius: 4px;
-  color: #ffffff;
-  font: 700 17px "Brandon Grotesque"; }
 
 div.favorite-geo div.geo-city {
   position: relative;
